[gd_scene load_steps=15 format=2]

[ext_resource path="res://Script/EnemyRobotDummy.gd" type="Script" id=1]
[ext_resource path="res://Prefabs/ElementalReaction.tscn" type="PackedScene" id=2]
[ext_resource path="res://Prefabs/Enemy/enemyUI/enemyHP.tscn" type="PackedScene" id=3]
[ext_resource path="res://Prefabs/Util/Explotion.tscn" type="PackedScene" id=4]
[ext_resource path="res://Texture/roboCop.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.343, 70.6848 )

[sub_resource type="Animation" id=2]
resource_name = "run"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=3]
resource_name = "shoot"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12 ]
}

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.890196, 0.0941176, 0.0941176, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 1, 69.8725 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 1, 68.3253 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 23.2837, 1 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 20, 1 )

[node name="EnemyRobot" type="KinematicBody2D"]
position = Vector2( 0, 12872.5 )
collision_layer = 8
collision_mask = 35
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4.57391, -7.28406 )
scale = Vector2( 2.5601, 2.5601 )
texture = ExtResource( 5 )
hframes = 13
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4.52806, 6.36737 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/run = SubResource( 2 )
anims/shoot = SubResource( 3 )

[node name="HP" parent="." instance=ExtResource( 3 )]
margin_left = -35.8917
margin_top = -86.1081
margin_right = 44.1083
margin_bottom = -74.1081
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
max_value = 10.0
value = 10.0

[node name="Reaction" parent="." instance=ExtResource( 2 )]

[node name="Timer" type="Timer" parent="."]

[node name="AreaCollide" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="left" type="CollisionShape2D" parent="AreaCollide"]
position = Vector2( -19.0312, 5.87868 )
shape = SubResource( 6 )

[node name="right" type="CollisionShape2D" parent="AreaCollide"]
position = Vector2( 28, 6 )
shape = SubResource( 7 )

[node name="top" type="CollisionShape2D" parent="AreaCollide"]
position = Vector2( 5, -66 )
shape = SubResource( 8 )

[node name="bottom" type="CollisionShape2D" parent="AreaCollide"]
position = Vector2( 3.99887, 79.0136 )
shape = SubResource( 9 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Explotion" parent="." instance=ExtResource( 4 )]

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -50, 0 )
enabled = true
cast_to = Vector2( 0, 90 )

[connection signal="timeout" from="Timer" to="." method="_on_Frozen_timeout"]
[connection signal="body_entered" from="AreaCollide" to="." method="_on_AreaCollide_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
